package Strategy;

public class Doing_Homework implements Activity {
    @Override
    public void justDoIt(){
        System.out.println("Делаю домашнюю работу....");
    }
}
