package Strategy;

public class Sleeping implements Activity {
    @Override
    public void justDoIt(){
        System.out.println("Сплю...");
    }
}
