package Strategy;

public class Studying_at_the_University implements Activity{
    @Override
    public void justDoIt(){
        System.out.println("Учеба в университете...");
    }
}
