package Strategy;

public class Training implements Activity {
    @Override
    public void justDoIt(){
        System.out.println("Тренировка в спортзале...");
    }
}
