package Strategy;

public class Walk implements Activity{
    @Override
    public void justDoIt(){
        System.out.println("Прогулка с друзьями...");
    }
}
